Fix button alignment and add clearfix in index.html and default.css

--- a/resources/styles/default.css
+++ b/resources/styles/default.css
@@ -89,3 +89,9 @@
     rotate: 20deg;
     filter:brightness(1.2)
 }
+
+.clearfix::after {
+    content: "";
+    display: table;
+    clear: both;
+}
